<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wands"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen5"
    tools:context="com.lumosmaximus.ashokkumarshrestha.lumosmaximus.WandsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:src="@drawable/wandp1"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:src="@drawable/wandp2"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:src="@drawable/wandp3"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:src="@drawable/wandp4"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:src="@drawable/wandp5"
                />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_5_title"
            android:textColor="@android:color/white"
            android:textSize="22dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/slide_5_desc1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="top|center"
        android:src="@drawable/ic_oli" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/btn_select"
        android:alpha=".5"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/btn_select"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:padding="10dp"
        android:text="@string/select"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:padding="10dp"
        android:text="@string/back"
        android:textColor="@android:color/white" />

</RelativeLayout>
